# atamid

./: README.md  index.html  params.json
Hardware/Electronics/: connector_board_pin.T3000  connector_board_socket.T3000  intermediate_board.T3000  main_board.T3000  power_board.T3000  splitter_board.T3000
Hardware/Firmware/: .mxproject  74HC4051D.c  74HC4051D.h  bus.c  bus.h  f051-cube-first.cogui  f051-cube-first.comarker  f051-cube-first.coproj  f051-cube-first.ioc  global.h  mlx90363.c  mlx90363.h  uart_queue.c  uart_queue.h  utility.c  utility.h
Hardware/Firmware/Drivers/CMSIS/Device/ST/STM32F0xx/Include/: stm32f030x6.h  stm32f030x8.h  stm32f030xc.h  stm32f031x6.h  stm32f038xx.h  stm32f042x6.h  stm32f048xx.h  stm32f051x8.h  stm32f058xx.h  stm32f070x6.h  stm32f070xb.h  stm32f071xb.h  stm32f072xb.h  stm32f078xx.h  stm32f091xc.h  stm32f098xx.h  stm32f0xx.h  system_stm32f0xx.h
Hardware/Firmware/Drivers/STM32F0xx_HAL_Driver/Inc/: stm32f0xx_hal_dma.h  stm32f0xx_hal_spi.h  stm32f0xx_hal_tim.h  stm32f0xx_hal_tim_ex.h  stm32f0xx_hal_wwdg.h
Hardware/Firmware/Drivers/STM32F0xx_HAL_Driver/Src/: stm32f0xx_hal_flash.c  stm32f0xx_hal_flash_ex.c  stm32f0xx_hal_pwr.c  stm32f0xx_hal_pwr_ex.c  stm32f0xx_hal_spi.c  stm32f0xx_hal_tim.c  stm32f0xx_hal_tim_ex.c  stm32f0xx_hal_uart.c  stm32f0xx_hal_wwdg.c
Hardware/Firmware/Inc/: stm32f0xx_hal_conf.h  stm32f0xx_it.h
Hardware/Firmware/Src/: main.c  main_old.c  stm32f0xx_hal_msp.c  stm32f0xx_it.c
Hardware/Firmware/TrueSTUDIO/f051-cube-first Configuration/: .cproject  .project  STM32F051K8_FLASH.ld  f051-cube-first Configuration.elf.launch
Hardware/Firmware/f051-cube-first/f051-cube-first.elf.xcodeproj/: project.pbxproj
Hardware/Mechanics/: bone10.stl  powerBox.stl  splitterH.stl  splitterY.stl
Software/RigReducer/: CMakeLists.txt  FindLIBIGL.cmake  MeshMerger.cpp  MeshMerger.h  draw_things.cpp  draw_things.h  main.cpp  puppet_things.h  reduceModel.cpp  reduceModel.h  reducer3.cpp  reducer3.h
Software/RigReducer/STL/: s_splitter_body.stl  s_splitter_in_II.stl  s_splitter_out_II.stl  tut_joint_five_II.stl  tut_joint_four_II.stl  tut_joint_one_II.stl  tut_joint_three_II.stl  tut_joint_two_II.stl
(+2 files in other folders)
